Project dependencies facelift